--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-typed": "^1.2.0",
     "react-vertical-timeline-component": "^3.5.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.0"
